Add Javascript support for day/night modes

--- a/portfolio/src/main/webapp/css/nightmode.css
+++ b/portfolio/src/main/webapp/css/nightmode.css
@@ -25,7 +25,7 @@
   height: 3.5rem;
   width: 3.5rem;
   background-color: #fff;
-  color: #fff;
+  color: #343a40;
   border-radius: 100%;
   font-size: 1.5rem;
   margin-right: 1.5rem;
