Add Map Feature and Fix Light/Dark Mode (#9)
* Add basic maps to pages

* Add markers and info windows

* Add markers and info windows

* Add nightmode support for maps

* Add nightmode support for maps

* Fix light/dark mode to work after refresh and update comments after delete

* Fix style

--- a/portfolio/src/main/webapp/css/nightmode.css
+++ b/portfolio/src/main/webapp/css/nightmode.css
@@ -22,3 +22,13 @@
   background-color: #fff;
   color: #343a40;
 }
+
+.info-window-text { 
+  color: #2f353a; 
+}
+
+.list-group-item { 
+  background-color: #2f353a;
+  border-color: #fff;
+  color: #fff
+}
